updates to layout bugs

--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@
   position: fixed;
   right: 12%;
   bottom: 10%;
-  z-index: 2;
+  z-index: 3;
   background: var(--charcoal-grey);
   padding: 0px 5px;
   border-radius: 15px;
